# anylearn

./: anylearn_db_backup.sql  anylearn_db_backup_no_gtid.sql  app.yaml  db.sqlite3  pyproject.toml  quickstart.py  requirements.txt  sdfdsf.py  transcribe_streaming_mic.py
chats/: admin.py  consumers.py  consumers.py.save  models.py  routing.py  serializers.py  translators.py  urls.py  views.py
chats/migrations/: 0001_initial.py
config/: app.yaml  asgi.py  settings.py  settings.py.save  urls.py
diaries/: admin.py  models.py  serializers.py  urls.py  views.py
diaries/migrations/: 0001_initial.py  0002_alter_diary_id_alter_diary_user_email.py  0003_alter_diary_id.py
scripts/: admin.py  models.py  models.py.save  serializers.py  urls.py  views.py
scripts/migrations/: 0001_initial.py  0002_remove_script_contents_script_contents.py  0003_remove_script_contents_script_contents.py  0004_alter_script_contents.py  0005_script_add_diary.py  0006_alter_script_add_diary.py  0007_script_show_expr.py  0008_script_input_expr.py
stt_test/: stt_test2.py
tts_test/: Hello_guys.txt  quickstart.py  synthesize_text.py
users/: admin.py  models.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_alter_user_birth.py  0002_alter_user_first_name_alter_user_last_name.py  0003_alter_user_birth.py  0003_alter_user_first_name_alter_user_last_name_and_more.py  0004_alter_user_avatar.py  0004_alter_user_nickname.py  0005_alter_user_avatar.py  0005_alter_user_managers_alter_user_email_and_more.py
