[tool.poetry]
name = "anylearn"
version = "0.1.0"
description = ""
authors = ["yuunseo <dbstj7457@naver.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.3"
gitignore = "^0.0.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
