[tool.poetry]
name = "anylearn"
version = "0.1.0"
description = ""
authors = ["yuunseo <dbstj7457@naver.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python-dotenv = "1.0.0"
django-environ = "0.10.0"
openai = "0.27.7"
django-bootstrap5 = "23.1"
requests = "*"
beautifulsoup4 = "*"
channels = { version = "~4.0.0", extras = ["daphne"] }
gTTS = "2.3.2"
python = "^3.11"
django = "^4.2.4"
gitignore = "^0.0.8"
djangorestframework = "^3.14.0"
google-cloud-texttospeech = "^2.14.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

