[tool.poetry]
name = "anylearn"
version = "0.1.0"
description = ""
authors = ["yuunseo <dbstj7457@naver.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python-dotenv = "1.0.0"
django-environ = "0.10.0"
openai = "0.27.7"
django-bootstrap5 = "23.1"
requests = "*"
beautifulsoup4 = "*"
channels = { version = "~4.0.0", extras = ["daphne"] }
gTTS = "2.3.2"
python = "^3.11"
django = "^4.2.4"
gitignore = "^0.0.8"
djangorestframework = "^3.14.0"
Websockets = "^11.0.3"
google-cloud-texttospeech = "^2.14.1"
google-cloud-storage = "^2.10.0"
google-cloud-speech = "^2.21.0"
pydub = "^0.25.1"
google-cloud-translate = "^3.12.0"
django-cors-headers = "^4.2.0"
gunicorn = "^21.2.0"
mysqlclient = "^2.1.0"
mysql = "^0.0.3"
djangorestframework-api-key = "^2.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

